2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: Fix another two places where we need
	  to call delete_value instead of free_value

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs:
	* MarkupExpressionParser.cs:
	* MoonlightValueConverter.cs: we should be calling
	  value_delete_value not value_free_value.

2010-05-17  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs:
	* NativeDependencyObjectHelper.cs: Make our managed Value
	  struct implement IDisposable and make that call
	  value_free_value. Change all places which use
	  Value.FromObject to wrap the returned Value in a using
	  statement. This should help find all the places where we use
	  value_free_value incorrectly.

2010-05-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Events.cs (CreateSendCompletedEventArgsEventHandlerDispatcher):
	Do not use anonymous methods for code that needs to be decorated
	with [SecuritySafeCritical] since the compiler can renamed them

2010-05-11  Chris Toshok  <toshok@ximian.com>

	* NativeMethods.cs (CreateManagedException): add
	SendFailedException support.

	* Events.cs (CreateSendCompletedEventArgsEventHandlerDispatcher):
	we need a little hack here to get the exception from the error,
	given the way our generator marshals MoonErrors.  Pass the
	exception to SendCompletedEventArgs's ctor.

2010-05-11  Jeffrey Stedfast  <fejj@novell.com>

	* Events.cs: Added safe handler for ContentChangedEventHandler.

	* NativeDependencyObjectHelper.cs: Added mapping to TextPointer
	and TextSelection.

2010-05-06  Chris Toshok  <toshok@ximian.com>

	* Types.cs: add hack to register StylusPoint = Kind.STYLUSPOINT,
	and also throw an exception when KindToType would have previously
	returned null since it's actually an error (and a rather insidious
	one at that)

2010-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Helper.cs: Add CheckAccess helper for class that inherit